2009-11-05  Torbjorn Granlund  <tege@gmplib.org>

	* mpn/x86/k7/gcd_1.asm: Actually use div-reduced value.
	Mnemonic cleanup.

	* mpn/x86_64/gcd_1.asm: New file.

2009-11-03  Torbjorn Granlund  <tege@gmplib.org>

	* tune/Makefile.am (TUNE_MPN_SRCS_BASIC): Add sqr_n.c.

2009-11-03  Marco Bodrato <bodrato@mail.dm.unipi.it>

	* mpn/generic/toom_interpolate_6pts.c: removed an addmul_1 and cleanup.

2009-11-02  Torbjorn Granlund  <tege@gmplib.org>

	* configure.in (gmp_mpn_functions): Remove obsolete functions
	dc_divrem_n and sb_divrem_mn.
	* gmp-impl.h: Misc cleanup.
	(mpn_sb_divrem_mn, mpn_dc_divrem_n): Remove.
	(DIV_DC_THRESHOLD): Remove.
	* mpn/generic/dc_divrem_n.c: Remove.
	* mpn/generic/sb_divrem_mn.c: Remove.
	* mpn/generic/tdiv_qr.c: Use DC_DIV_QR_THRESHOLD, not DIV_DC_THRESHOLD.

	* tests/devel/try.c: Replace mpn_sb_divrem_mn by mpn_sbpi1_div_qr.
	* tests/refmpn.c (refmpn_sb_div_qr): New name for refmpn_sb_divrem_mn.

	* tune/Makefile.am (libspeed_la_SOURCES): Remove sb_div.c and sb_inv.c.
	(TUNE_MPN_SRCS_BASIC): Remove sb_divrem_mn.c.
	* tune/common.c (speed_mpn_dcpi1_div_qr_n): New function.
	 Remove mpn_sb_divrem_mn related functions.
	* tune/speed.c (routine): Remove entries related to mpn_dc_divrem and
	mpn_sb_divrem.
	(routine): New entry for mpn_dc_div_qr_n.
	* tune/speed.h (SPEED_ROUTINE_MPN_DC_DIVREM_CALL): Compute inverse
	needed by pi1 calls.
	(SPEED_ROUTINE_MPN_SB_DIVREM_M3): Remove.
	* tune/tuneup.c (tune_sb_preinv): Remove.
	(tune_dc): Update to measure DC_DIV_QR_THRESHOLD.

	* mpn/generic/sb_divappr_q.c: Remove.

2009-11-01  Torbjorn Granlund  <tege@gmplib.org>

	* gmp-impl.h: Misc minor cleanups.

2009-10-31  Torbjorn Granlund  <tege@gmplib.org>

	* gmp-impl.h (toom itch functions): Simplify, make some into macros.
	(MPN_KARA_MUL_N_TSIZE, MPN_KARA_SQR_N_TSIZE): Remove.
	* mpn/generic/mul_n.c (mpn_toom3_mul_n, mpn_toom3_sqr_n): Remove.
	* mpn/generic/mul_n.c (mpn_sqr_n): Move from here...
	* mpn/generic/sqr_n.c: ...to this new file.